--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Architects in montreal, best interrior designer, landscappers in montreal, Mandeep's Architecture studio">
     <meta name="keywords"
-        content="architecture, interrior, exterrior, elevation, landscsaping, montreal, Harpreet, studio, house, real estate">
+        content="architecture, interrior, exterrior, elevation, landscsaping, montreal, Mandeep, studio, house, real estate">
     <meta name="author" content="Mandeep Kaur">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="jpg/png" href="images/favicon.png">
