--- a/interior.html
+++ b/interior.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Interior - Harpreet's Arch. Studio</title>
+    <title>Interior - Mandeep's Arch. Studio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -26,7 +26,7 @@
     <head>
         <nav>
             <div class="logo">
-                <img src="images/logo6.png" alt="logo">
+                <img src="images/logofinal.png" alt="logo">
             </div>
 
             <ul>
